--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     </p>
                     <p>When creating comment file, use md (MarkDown) file format(e.g. comment.md).</p>
                     <p>
-                        PROJECT board should be created beforehand ISSUES so that issues are attached to the project board automatically. Issues should be listed on the board according to priority.
-                        Applying AGILE principles.
+                        PROJECT board should be created beforehand ISSUES so that issues are attached to the project board automatically. Issues should be listed on the board
+                        according to priority. Applying AGILE principles.
                     </p>
                     <div class="example">
                         <p>Possible Issues in GitHub could be:</p>
@@ -95,8 +95,8 @@
                         - make path changes to favicon folder in the copied code.
                     </p>
                     <p>
-                        When only <strong>floating elements</strong> are included in a <strong>block element</strong>, block element (i.e. parent element) has no height, therefore parent's display
-                        should be changed to <span class="code">inline-block</span>. <br />
+                        When only <strong>floating elements</strong> are included in a <strong>block element</strong>, block element (i.e. parent element) has no height, therefore
+                        parent's display should be changed to <span class="code">inline-block</span>. <br />
                         <span class="code">margin: 0 auto</span> works for <strong>block elements</strong> only.
                     </p>
                     <p>
@@ -120,7 +120,8 @@
                     <a href="https://www.youtube.com/watch?v=1u9Crr9MxEA" target="_blank" class="youtube"> Youtube video part 2 </a>
                     <p>
                         All text properties are inherited (with several exceptions., e.g. anchor tag). Therefore set font-family on body tag. <br />
-                        If border is needed around element on hover, put transparent border on static element as well so thet it will not influence position of other elements when hovering.
+                        If border is needed around element on hover, put transparent border on static element as well so thet it will not influence position of other elements when
+                        hovering.
                     </p>
                     <p>
                         <span class="tech">CSS</span>:
@@ -128,12 +129,12 @@
                         ;
                     </p>
                     <p>
-                        To use <strong>em</strong> instead of px, font-size must be set. Pay attention, that <strong>line-height default is 1.2</strong> of font-size. Therefore, set line-height same
-                        as font-size to have better control over vertical spacing in nav.
+                        To use <strong>em</strong> instead of px, font-size must be set. Pay attention, that <strong>line-height default is 1.2</strong> of font-size. Therefore,
+                        set line-height same as font-size to have better control over vertical spacing in nav.
                         <strong> font-size and line-height should ALWAYS be paired to prevent distortion when browsers change default line-height </strong>
                         . <br />
-                        When font-size of the element is set, it makes sense to set all other property values in em so that sizing changes proportionally all the time by changing only one value
-                        (font-size).
+                        When font-size of the element is set, it makes sense to set all other property values in em so that sizing changes proportionally all the time by changing
+                        only one value (font-size).
                     </p>
                     <div class="example">
                         <p>Example using em:</p>
@@ -176,13 +177,13 @@
                         .
                     </p>
                     <p>
-                        Usa <strong>class attribute</strong> instead of element selectors to improve readibility and attach meaning. Moreover, after changing html structure you won't need to change
-                        styling, because classes remain same.
+                        Usa <strong>class attribute</strong> instead of element selectors to improve readibility and attach meaning. Moreover, after changing html structure you
+                        won't need to change styling, because classes remain same.
                     </p>
                     <p>
-                        <strong>FontAwesome</strong> is based on classes ('fa fa-iconName'). FontAwesome classes are 'described' in css folder font-awesome.css and font-awesome.min.css files. Only
-                        <strong>font-awesome.min.css</strong> file is needed and linked to HTML file. You can merge FontAwesome icons with anchor tags, by putting FontAwesome classes ('fa
-                        fa-iconName') into anchor tag and deleting icon tags.
+                        <strong>FontAwesome</strong> is based on classes ('fa fa-iconName'). FontAwesome classes are 'described' in css folder font-awesome.css and
+                        font-awesome.min.css files. Only <strong>font-awesome.min.css</strong> file is needed and linked to HTML file. You can merge FontAwesome icons with anchor
+                        tags, by putting FontAwesome classes ('fa fa-iconName') into anchor tag and deleting icon tags.
                     </p>
                     <p>Third party styles should be linked before our own css.</p>
                     <p>
@@ -241,8 +242,8 @@
                     <a class="youtube" href="https://www.youtube.com/watch?v=WOsIAzq6GEo" target="_blank">Youtube video part 1 </a>
                     <a class="youtube" href="https://www.youtube.com/watch?v=mBHTXVG0U8s" target="_blank">Youtube video part 2 </a>
                     <p>
-                        If direct changes are made to develop branch (e.g. direct pull request from Imgbot ) - pull requests should be made from develop to lower level branches to prevent differences,
-                        synchronize changes in VS code. <br />
+                        If direct changes are made to develop branch (e.g. direct pull request from Imgbot ) - pull requests should be made from develop to lower level branches to
+                        prevent differences, synchronize changes in VS code. <br />
                         Class <strong>'container'</strong> is used for 100% width general blocks in a website. <br />
                         <span class="tech">CSS</span>:
                         <span class="code">@media (min-width, max-width etc.) { }</span>
@@ -278,7 +279,8 @@
                     <a class="youtube" href="https://www.youtube.com/watch?v=1RQdDIEBKNg" target="_blank">Youtube video part 2 </a>
                     <p>
                         <strong>320px</strong> will be the least width to which we will addapt in @media. <br />
-                        An <strong>HTML entity</strong> is a piece of text ("string") that begins with an ampersand (&) and ends with a semicolon (;). Frequently used to display reserved characters.
+                        An <strong>HTML entity</strong> is a piece of text ("string") that begins with an ampersand (&) and ends with a semicolon (;). Frequently used to display
+                        reserved characters.
                         <br />
                         <a href="https://www.w3schools.com/html/html_entities.asp" target="_blank"> HTML Entities </a>
                     </p>
@@ -299,18 +301,21 @@
                     <a class="youtube" href="https://www.youtube.com/watch?v=g979KFS-rcY" target="_blank">Youtube video part 1 </a>
                     <a class="youtube" href="https://www.youtube.com/watch?v=iRywr97-jdw" target="_blank">Youtube video part 2 </a>
                     <p>
-                        The <span class="code">background-image</span> property sets one or more background images on an element. <span class="code">background-color</span> must be also indicated in
-                        case the image is no longer available.
+                        The <span class="code">background-image</span> property sets one or more background images on an element. <span class="code">background-color</span> must be
+                        also indicated in case the image is no longer available.
                     </p>
-                    <p><span class="code">background-repeat</span> CSS property sets how background images are repeated. Values: <strong>repeat, no-repeat, repeat-x, repeat-y</strong>.</p>
+                    <p>
+                        <span class="code">background-repeat</span> CSS property sets how background images are repeated. Values:
+                        <strong>repeat, no-repeat, repeat-x, repeat-y</strong>.
+                    </p>
                     <p>
                         <span class="code">background-position</span> CSS property sets the initial position for each background image. Values:
                         <strong> top, bottom, left, right, center, top left, top right and etc. </strong>
                         . It can be also set as % values.
                     </p>
                     <p>
-                        <span class="code">background-size</span> roperty sets the size of the element's background image. The image can be left to its natural size, stretched, or constrained to fit
-                        the available space. Values: <strong> auto (default), contain, cover</strong>.
+                        <span class="code">background-size</span> roperty sets the size of the element's background image. The image can be left to its natural size, stretched, or
+                        constrained to fit the available space. Values: <strong> auto (default), contain, cover</strong>.
                     </p>
 
                     <ul>
@@ -327,8 +332,8 @@
                     </ul>
                     <p><strong>Important:</strong> % and vw difference is that, % does not take scroll into account, while vw does (therefore bottom scroll might occur).</p>
                     <p>
-                        <span class="code">background-attachment</span> CSS property sets whether a background image's position is fixed within the viewport, or scrolls with its containing block.
-                        Values: <strong> scroll (fixed relative to the element itself), fixed (relative to viewport) </strong>. Can be used for hero parallax.
+                        <span class="code">background-attachment</span> CSS property sets whether a background image's position is fixed within the viewport, or scrolls with its
+                        containing block. Values: <strong> scroll (fixed relative to the element itself), fixed (relative to viewport) </strong>. Can be used for hero parallax.
                     </p>
 
                     <div class="example">
@@ -355,14 +360,16 @@
                     </div>
                     <p>
                         <span class="code">@keyframes identifier { }</span>
-                        controls the intermediate steps in a CSS animation sequence by defining styles for keyframes (or waypoints) along the animation sequence. Animated element must have at least
+                        controls the intermediate steps in a CSS animation sequence by defining styles for keyframes (or waypoints) along the animation sequence. Animated element
+                        must have at least
                         <span class="code">animation-name</span> (includes keyframes identifier) and <span class="code">animation-duration</span>.
-                        <span class="code">animation-iteration-count</span> indicates how many times animation should be played. <span class="code">animation-delay</span> is used before animation
-                        starts, but not for every iteration. For iterations to delay e.g. at the beginning, include two breakpoins in keyframes with same properties - this will delay indicated % of
-                        the breakpoint *total duration time.
+                        <span class="code">animation-iteration-count</span> indicates how many times animation should be played. <span class="code">animation-delay</span> is used
+                        before animation starts, but not for every iteration. For iterations to delay e.g. at the beginning, include two breakpoins in keyframes with same
+                        properties - this will delay indicated % of the breakpoint *total duration time.
                     </p>
                     <p>
-                        <span class="code">transform: translate() </span> CSS function repositions an element in the horizontal and/or vertical directions relative to 'itself'. Possible values:
+                        <span class="code">transform: translate() </span> CSS function repositions an element in the horizontal and/or vertical directions relative to 'itself'.
+                        Possible values:
                         <strong>translate(), translateX(), translateY()</strong>
                     </p>
 
@@ -396,12 +403,14 @@
                     <a class="youtube" href="https://www.youtube.com/watch?v=Kdl0Iaq0TQo" target="_blank">Youtube video part 1 </a>
                     <a class="youtube" href="https://www.youtube.com/watch?v=gi9IefwWars" target="_blank">Youtube video part 2 </a>
                     <p>
-                        To start with <span class="tech">JS</span> in VS code <span class="code"> npm i - D nodemon</span>. In <strong>package.json</strong> add all js files according to the name e.g.
-                        <span class="code">"strings": "nodemon ./js/03-strings.js",</span>.
+                        To start with <span class="tech">JS</span> in VS code <span class="code"> npm i - D nodemon</span>. In <strong>package.json</strong> add all js files
+                        according to the name e.g. <span class="code">"strings": "nodemon ./js/03-strings.js",</span>.
                     </p>
                     <p>
                         Practice for homework:
-                        <a href="https://docs.google.com/document/d/1UnM5MzO7KPf-atlz3HXPJN8XlaN37nlUJ7fp6GwvIZ8/edit#heading=h.40g6yguvm5k8" target="_blank">JavaScript mini užduotys</a>.
+                        <a href="https://docs.google.com/document/d/1UnM5MzO7KPf-atlz3HXPJN8XlaN37nlUJ7fp6GwvIZ8/edit#heading=h.40g6yguvm5k8" target="_blank"
+                            >JavaScript mini užduotys</a
+                        >.
                     </p>
                 </div>
                 <div class="day">
@@ -425,14 +434,36 @@
                     <a class="youtube" href="https://www.youtube.com/watch?v=zHigFJxHgUU" target="_blank">Youtube video part 2 </a>
                     <p>
                         <span class="code">isNaN()</span> returns true or false. <br />
-                        <span class="code">isFinite()</span> determines whether the passed value is a finite number. If the argument is NaN, positive infinity, or negative infinity, this method
-                        returns false; otherwise, it returns true.
+                        <span class="code">isFinite()</span> determines whether the passed value is a finite number. If the argument is NaN, positive infinity, or negative
+                        infinity, this method returns false; otherwise, it returns true.
                     </p>
                 </div>
                 <div class="day">
-                    <h3>2022-12-19</h3>
+                    <h3>2022-12-19 - reverseString, rangeDivide, digitCount, biggestNumber exercises</h3>
                     <a class="youtube" href="https://www.youtube.com/watch?v=uGSKx71cDGc&t=6s" target="_blank">Youtube video part 1 </a>
                     <a class="youtube" href="https://www.youtube.com/watch?v=GTS1NPsH21M&t=2s" target="_blank">Youtube video part 2 </a>
+                </div>
+                <p><span class="code">Array.isArray(arr)</span> determines whether the passed value is an Array.</p>
+                <div class="day">
+                    <h3>2022-12-20 - ternary operator, string methods, arrow functions, destructuring and spread(...)</h3>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=QyEbaSOOjQY" target="_blank">Youtube video part 1 </a>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=p3r6IqBQKYk" target="_blank">Youtube video part 2 </a>
+                    <p>
+                        <span class="code">Number.prototype.toString()</span>
+                        <br />
+                        <span class="code">Number.prototype.toString(radix)</span>
+                        returns a string representing the specified number value.
+                    </p>
+                    <p>
+                        <span class="code">parseInt(string)</span>
+                        <br />
+                        <span class="code">parseInt(string, radix)</span>
+                        parses a string argument and returns an integer of the specified radix (the base in mathematical numeral systems).
+                    </p>
+                    <p><span class="code"> Array(length).fill(0)</span> fills array with 0 values indicated number of times (length).</p>
+                    <p><span class="code"> [...Array(n).keys()]</span> another way to create new array with keys equal to index</p>
+                    <a href="https://regexlearn.com/learn/regex101" target="_blank">RegexLearn</a> <br />
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions" target="_blank">Regex on MDN</a>
                 </div>
             </div>
 
