--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
                     <h3>2022-12-19 - reverseString, rangeDivide, digitCount, biggestNumber exercises</h3>
                     <a class="youtube" href="https://www.youtube.com/watch?v=uGSKx71cDGc&t=6s" target="_blank">Youtube video part 1 </a>
                     <a class="youtube" href="https://www.youtube.com/watch?v=GTS1NPsH21M&t=2s" target="_blank">Youtube video part 2 </a>
+                    <p><span class="code">Array.isArray(arr)</span> determines whether the passed value is an Array.</p>
                 </div>
-                <p><span class="code">Array.isArray(arr)</span> determines whether the passed value is an Array.</p>
                 <div class="day">
                     <h3>2022-12-20 - ternary operator, string methods, arrow functions, destructuring and spread(...)</h3>
                     <a class="youtube" href="https://www.youtube.com/watch?v=QyEbaSOOjQY" target="_blank">Youtube video part 1 </a>
@@ -464,6 +464,16 @@
                     <p><span class="code"> [...Array(n).keys()]</span> another way to create new array with keys equal to index</p>
                     <a href="https://regexlearn.com/learn/regex101" target="_blank">RegexLearn</a> <br />
                     <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions" target="_blank">Regex on MDN</a>
+                </div>
+                <div class="day">
+                    <h3>2022-12-21 - spread and rest operators, loops (while, for of, forEach, for in), map method, primitive vs referrence data types</h3>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=2iEo0OqdL4c" target="_blank">Youtube video part 1 </a>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=o7OLQExYUm8" target="_blank">Youtube video part 2 </a>
+                </div>
+                <div class="day">
+                    <h3>2022-12-22 - copying multi level arrays, map method, filter</h3>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=SrjnSoVDLEw" target="_blank">Youtube video part 1 </a>
+                    <a class="youtube" href="" target="_blank">Youtube video part 2 </a>
                 </div>
             </div>
 
