--- a/index.html
+++ b/index.html
@@ -471,9 +471,33 @@
                     <a class="youtube" href="https://www.youtube.com/watch?v=o7OLQExYUm8" target="_blank">Youtube video part 2 </a>
                 </div>
                 <div class="day">
-                    <h3>2022-12-22 - copying multi level arrays, map method, filter</h3>
+                    <h3>2022-12-22 - copying multi level arrays, map method, filter, sort, reduce</h3>
                     <a class="youtube" href="https://www.youtube.com/watch?v=SrjnSoVDLEw" target="_blank">Youtube video part 1 </a>
-                    <a class="youtube" href="" target="_blank">Youtube video part 2 </a>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=aLa6g4SsTe4" target="_blank">Youtube video part 2 </a>
+                </div>
+
+                <div class="day">
+                    <h3>2022-12-27 - reduce method, parseInt, parseFloat, toFixed, classes</h3>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=utca89TPeCI" target="_blank">Youtube video part 1 </a>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=xRhKckvyqys" target="_blank">Youtube video part 2 </a>
+                    <p><span class="code">String.fromCharCode()</span>method returns a string created from the specified sequence of UTF-16 code units.</p>
+                    <p class="example">
+                        class Dog { <br />
+                        constructor(name) { <br />
+                        this.name = name; <br />
+                        this.behavior = 0; <br />
+                        } <br />
+                        } <br />
+                        const dog1 = new Dog('Rex');
+                    </p>
+                    <p>Exporting/importing variables from other files:</p>
+                    <ol>
+                        <li>Changes in <span class="tech">package.json</span>: insert <span class="code">"type": "module",</span> above 'main'</li>
+                        <li>Exporting from file where variable originates: <span class="code">export default Variablename</span></li>
+                        <li>Import to a file, where variable is needed: <span class="code">import Variablename from "./Filename.js"</span></li>
+                    </ol>
+                    <p>According to the old way: export <span class="code"> module.exports = Variablename</span>, import:</p>
+                    <span class="code"> const Variablename = require('./Filename')</span>
                 </div>
             </div>
 
