--- a/index.html
+++ b/index.html
@@ -496,8 +496,11 @@
                         <li>Exporting from file where variable originates: <span class="code">export default Variablename</span></li>
                         <li>Import to a file, where variable is needed: <span class="code">import Variablename from "./Filename.js"</span></li>
                     </ol>
-                    <p>According to the old way: export <span class="code"> module.exports = Variablename</span>, import:</p>
-                    <span class="code"> const Variablename = require('./Filename')</span>
+                    <p>
+                        According to the old way: export <span class="code"> module.exports = Variablename</span>, <br />
+                        import:
+                        <span class="code"> const Variablename = require('./Filename')</span>
+                    </p>
                 </div>
             </div>
 
