--- a/index.html
+++ b/index.html
@@ -502,6 +502,16 @@
                         <span class="code"> const Variablename = require('./Filename')</span>
                     </p>
                 </div>
+                <div class="day">
+                    <h3>2022-12-18 - classes, imports/exports, this keyword</h3>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=Yv6o0bpDcH0" target="_blank">Youtube video part 1 </a>
+                    <p>
+                        <span class="code">export {variablename1, variablename2...}</span> and
+                        <span class="code">import {variablename1, variablename2..} from './Filename.js</span> allows to import/export several variables at once, prevents from
+                        changing variable names in import file (unless explicitly indicated with <span class="code">variableName as newVariableName</span> )
+                    </p>
+                    <p><span class="code">import * as objName from './Filename.js</span> allows to import object of variables from another file.</p>
+                </div>
             </div>
 
             <a href="#" class="fa fa-angle-up back-to-top"></a>
