--- a/index.html
+++ b/index.html
@@ -739,6 +739,11 @@
                 <p><a href="https://github.com/belauzas/vsc-config/blob/master/config.json">VScode konfigūracinis json failas</a></p>
                 <p><a href="https://getbootstrap.com/docs/5.3/layout/breakpoints/">Breakpoins</a></p>
             </div>
+            <div class="day">
+                <h3>2023-01-05 - Group portfolio project, 12 col grid system, margins and visibility, specificity</h3>
+                <a class="youtube" href="https://www.youtube.com/watch?v=zHUcksM-9pc" target="_blank">Youtube video part 1
+                </a>
+            </div>
         </div>
         <a href="#" class="fa fa-angle-up back-to-top"></a>
 
