--- a/index.html
+++ b/index.html
@@ -755,6 +755,20 @@
                     <p><span class="code">element.innerHTML</span> gets or sets the HTML or XML markup contained within the element.</p>
                     <p><span class="code">document.getElementById()</span> returns an Element object representing the element whose id property matches the specified string.</p>
                 </div>
+                <div class="day">
+                    <h3>2022-01-10 - Group portfolio project, content rendering, best data formats for content rendering, validations, throw new Error</h3>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=WeLYCNzbNkI" target="_blank">Youtube video part 1
+                    </a>
+                    <a class="youtube" href="" target="_blank">Youtube video part 2
+                    </a>
+                    <p><span class="code">throw</span> throws a user-defined exception. Execution of the current function will stop (the statements after throw won't be executed)</p>
+                    <p><em>Example</em></p>
+                    <p class="example">function getRectArea(width, height) { <br>
+                        if (isNaN(width) || isNaN(height)) { <br>
+                        throw new Error('Parameter is not a number!'); <br>
+                        } <br>
+                        }</p>
+                </div>
             </div>
             <a href="#" class="fa fa-angle-up back-to-top"></a>
 
