--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                     <span class="code">npm i - D nodemon</span>
                     . In
                     <strong>package.json</strong>
-                    add all js files according to the name e.g.
+                    add all js files according to the name e.g. in 'scripts'
                     <span class="code">"strings": "nodemon ./js/03-strings.js",</span>
                     .
                 </p>
@@ -756,10 +756,10 @@
                     <p><span class="code">document.getElementById()</span> returns an Element object representing the element whose id property matches the specified string.</p>
                 </div>
                 <div class="day">
-                    <h3>2022-01-10 - Group portfolio project, content rendering, best data formats for content rendering, validations, throw new Error</h3>
+                    <h3>2022-01-10 - Group portfolio project, content rendering, best data formats for content rendering, validations, throw new Error, Math library</h3>
                     <a class="youtube" href="https://www.youtube.com/watch?v=WeLYCNzbNkI" target="_blank">Youtube video part 1
                     </a>
-                    <a class="youtube" href="" target="_blank">Youtube video part 2
+                    <a class="youtube" href="https://www.youtube.com/watch?v=KVaox0e1Ank" target="_blank">Youtube video part 2
                     </a>
                     <p><span class="code">throw</span> throws a user-defined exception. Execution of the current function will stop (the statements after throw won't be executed)</p>
                     <p><em>Example</em></p>
