--- a/index.html
+++ b/index.html
@@ -769,6 +769,37 @@
                         } <br>
                         }</p>
                 </div>
+                <div class="day">
+                    <h3>2022-01-11</h3>
+                    <a class="youtube" href="" target="_blank">Youtube video part 1
+                    </a>
+                    <a class="youtube" href="" target="_blank">Youtube video part 2
+                    </a>
+                </div>
+                <div class="day">
+                    <h3>2022-01-12</h3>
+                    <a class="youtube" href="" target="_blank">Youtube video part 1
+                    </a>
+                    <a class="youtube" href="" target="_blank">Youtube video part 2
+                    </a>
+                </div>
+                <div class="day">
+                    <h3>2022-01-16 - Group portfolio project, introduction to DOM</h3>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=D7vtso2hnNk" target="_blank">Youtube video part 1
+                    </a>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=7aYdZO49DxE" target="_blank">Youtube video part 2
+                    </a>
+                    <p><span class="code">aspect-ratio</span> CSS property sets a preferred aspect ratio for the box, which will be used in the calculation of auto sizes and some other layout functions.</p>
+                    <p><span class="code">object-fit</span> CSS property sets how the content of a replaced element, such as an img or video, should be resized to fit its container.</p>
+                </div>
+                <p><span class="code">document.getElementsByTagName(name)</span> returns an HTMLCollection of elements with the given tag name.</p>
+                <p><span class="code">Element.classList</span> is a read-only property that returns a live DOMTokenList collection of the class attributes of the element. This can then be used to manipulate the class list.</p>
+                <p><span class="code">DOMTokenList.remove()</span> method of the DOMTokenList interface removes the specified tokens from the list.</p>
+                <p><span class="code">DOMTokenList.toggle()</span> method of the DOMTokenList interface removes an existing token from the list and returns false. If the token doesn't exist it's added and the function returns true.</p>
+                <p><span class="code">DOMTokenList.contains()</span> method of the DOMTokenList interface returns a boolean value — true if the underlying list contains the given token, otherwise false.</p>
+                <p><span class="code">Document.querySelector(selector)</span> returns the first Element within the document that matches the specified selector, or group of selectors. If no matches are found, null is returned. Selectors are same as in CSS</p>
+                <p><span class="code">EventTarget.addEventListener(event, function)</span> method sets up a function that will be called whenever the specified event is delivered to the target.</p>
+                <p><span class="code">Document.querySelectorAll(selector)</span> method returns a static (not live) NodeList representing a list of the document's elements that match the specified group of selectors.</p>
             </div>
             <a href="#" class="fa fa-angle-up back-to-top"></a>
 
