--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
                     <p><span class="code">document.getElementById()</span> returns an Element object representing the element whose id property matches the specified string.</p>
                 </div>
                 <div class="day">
-                    <h3>2022-01-10 - Group portfolio project, content rendering, best data formats for content rendering, validations, throw new Error, Math library</h3>
+                    <h3>2022-01-10 - Group portfolio project, content rendering, best data formats for content rendering, validations, throw new Error, Math library, static methods</h3>
                     <a class="youtube" href="https://www.youtube.com/watch?v=WeLYCNzbNkI" target="_blank">Youtube video part 1
                     </a>
                     <a class="youtube" href="https://www.youtube.com/watch?v=KVaox0e1Ank" target="_blank">Youtube video part 2
@@ -770,11 +770,12 @@
                         }</p>
                 </div>
                 <div class="day">
-                    <h3>2022-01-11</h3>
-                    <a class="youtube" href="" target="_blank">Youtube video part 1
+                    <h3>2022-01-11 - Goup portfolio project, js documentation </h3>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=X8cIVokDk7s&t" target="_blank">Youtube video part 63
                     </a>
-                    <a class="youtube" href="" target="_blank">Youtube video part 2
+                    <a class="youtube" href="" target="_blank">Youtube video part 64
                     </a>
+                    <p><a href="https://jsdoc.app/" target="_blank">JSDoc link</a></p>
                 </div>
                 <div class="day">
                     <h3>2022-01-12</h3>
