--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="bubble smile"></div>
     </div>
     <nav class="main-navigation container">
+        <a href="#back-end">Back-end</a>
         <a href="#group-project">Group project</a>
         <a href="#js-intro">JS Intro</a>
         <a href="#coming-soon">Coming soon</a>
@@ -708,8 +709,9 @@
         <div class="week" id="group-project">
             <header>
                 <h2>
-                    <a href="https://github.com/front-end-by-rimantas/41-grupe-portfolio-react" target="_blank">React group project</a>
+                    <a href="https://github.com/front-end-by-rimantas/41-grupe-portfolio" target="_blank">Portfolio project</a>
                 </h2>
+                <a href="https://github.com/front-end-by-rimantas/41-grupe-portfolio-react" target="_blank">React group project</a>
             </header>
             <div class="day">
                 <h3>2023-01-02 - Portfolio project setup</h3>
@@ -770,25 +772,26 @@
                         }</p>
                 </div>
                 <div class="day">
-                    <h3>2022-01-11 - Goup portfolio project, js documentation </h3>
+                    <h3>2022-01-11 - Goup portfolio project (gallery), js documentation </h3>
                     <a class="youtube" href="https://www.youtube.com/watch?v=X8cIVokDk7s&t" target="_blank">Youtube video part 63
                     </a>
-                    <a class="youtube" href="" target="_blank">Youtube video part 64
+                    <a class="youtube" href="https://www.youtube.com/watch?v=X_mWBBCbKMM" target="_blank">Youtube video part 64
                     </a>
                     <p><a href="https://jsdoc.app/" target="_blank">JSDoc link</a></p>
                 </div>
                 <div class="day">
-                    <h3>2022-01-12</h3>
-                    <a class="youtube" href="" target="_blank">Youtube video part 1
+                    <h3>2022-01-12 - Group portfolio project</h3>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=vaINAnqWU-c" target="_blank">Youtube video part 65
                     </a>
-                    <a class="youtube" href="" target="_blank">Youtube video part 2
+                    <a class="youtube" href="https://www.youtube.com/watch?v=RK6hmhVeMDg&t" target="_blank">Youtube video part 66
                     </a>
+                    <p>object-fit, object-position</p>
                 </div>
                 <div class="day">
                     <h3>2022-01-16 - Group portfolio project, introduction to DOM</h3>
-                    <a class="youtube" href="https://www.youtube.com/watch?v=D7vtso2hnNk" target="_blank">Youtube video part 1
+                    <a class="youtube" href="https://www.youtube.com/watch?v=D7vtso2hnNk" target="_blank">Youtube video part 67
                     </a>
-                    <a class="youtube" href="https://www.youtube.com/watch?v=7aYdZO49DxE" target="_blank">Youtube video part 2
+                    <a class="youtube" href="https://www.youtube.com/watch?v=7aYdZO49DxE" target="_blank">Youtube video part 68
                     </a>
                     <p><span class="code">aspect-ratio</span> CSS property sets a preferred aspect ratio for the box, which will be used in the calculation of auto sizes and some other layout functions.</p>
                     <p><span class="code">object-fit</span> CSS property sets how the content of a replaced element, such as an img or video, should be resized to fit its container.</p>
@@ -802,9 +805,49 @@
                 <p><span class="code">EventTarget.addEventListener(event, function)</span> method sets up a function that will be called whenever the specified event is delivered to the target.</p>
                 <p><span class="code">Document.querySelectorAll(selector)</span> method returns a static (not live) NodeList representing a list of the document's elements that match the specified group of selectors.</p>
             </div>
-            <a href="#" class="fa fa-angle-up back-to-top"></a>
+            <div class="day">
+                <h3>2023-01-17 - Group portfolio project (gallery js, validations)</h3>
+                <a class="youtube" href="https://www.youtube.com/watch?v=CY8vzgc9CNk" target="_blank">Youtube video part 69
+                </a>
+                <a class="youtube" href="https://www.youtube.com/watch?v=2xH8VV9NJXg" target="_blank">Youtube video part 70
+                </a>
+                <div class="day">
+                    <h3>2023-01-18 - Group portfolio project (gallery - filter generation), intro to backend </h3>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=1XSNqjc77bk" target="_blank">Youtube video part 71
+                    </a>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=IcvMzDoRWa8" target="_blank">Youtube video part 72
+                    </a>
+                    <p>To launch <span class="code">index.js</span> in node:</p>
+                    <ul>
+                        <li>$node ./index.js</li>
+                        <li>$node ./</li>
+                        <li>$node .</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="week">
+            <header>
+                <h2>
+                    <a href="https://github.com/front-end-by-rimantas/41-grupe-server" target="_blank" id="back-end">
+                        Server project
+                    </a>
+                </h2>
 
-            <!-- week template 
+                <a href="" target="_blank"> Personal Repo for the project </a>
+            </header>
+            <div class="day">
+                <h3>2023-01-19 - back-end</h3>
+                <a class="youtube" href="" target="_blank">Youtube video part 73
+                </a>
+                <a class="youtube" href="" target="_blank">Youtube video part 2
+                </a>
+            </div>
+        </div>
+
+        <a href="#" class="fa fa-angle-up back-to-top"></a>
+        <!-- /imagine prompt:abandoned city after cataclysm, red sunset, destroyed skyscrapers and homes with no windows, autumn, funny clown patting relaxed dirty black cat with amber eyes in front of the picture, old newspapers and leaves flying  in the wind, melancholic, digital surrealistism -->
+        <!-- week template 
                 <div class="week">
                     <header>
                         <h2>
@@ -820,7 +863,7 @@
                 </header>
             </div>
             -->
-            <!-- day template 
+        <!-- day template 
             <div class="day">
                 <h3></h3>
                     <a
