--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
                 <a class="youtube" href="https://www.youtube.com/watch?v=2xH8VV9NJXg" target="_blank">Youtube video part 70
                 </a>
                 <div class="day">
-                    <h3>2023-01-18 - Group portfolio project (gallery - filter generation), intro to backend </h3>
+                    <h3>2023-01-18 - Group portfolio project (gallery - filter generation), intro to backend, creating server </h3>
                     <a class="youtube" href="https://www.youtube.com/watch?v=1XSNqjc77bk" target="_blank">Youtube video part 71
                     </a>
                     <a class="youtube" href="https://www.youtube.com/watch?v=IcvMzDoRWa8" target="_blank">Youtube video part 72
@@ -823,6 +823,7 @@
                         <li>$node ./</li>
                         <li>$node .</li>
                     </ul>
+
                 </div>
             </div>
         </div>
@@ -838,12 +839,23 @@
             </header>
             <div class="day">
                 <h3>2023-01-19 - back-end</h3>
-                <a class="youtube" href="" target="_blank">Youtube video part 73
+                <a class="youtube" href="https://www.youtube.com/watch?v=0geOwWRvqWw" target="_blank">Youtube video part 73
                 </a>
-                <a class="youtube" href="" target="_blank">Youtube video part 2
+                <a class="youtube" href="https://www.youtube.com/watch?v=lt4quZxssno" target="_blank">Youtube video part 74
                 </a>
+                <p><a href="https://nodejs.org/dist/latest-v18.x/docs/api/" target="_blank">Node.js documentation</a></p>
+                <p><span class="code">http.createServer(optional: requestListener)</span> method turns your computer into an HTTP server and creates an HTTP Server object.</p>
+                <p><span class="code">function (request, response) {
+                        }</span> The <strong>requestListener</strong> is a function that is called each time the server gets a request.The function is passed as a parameter to the http.createServer() method. The requestListener function handles requests from the user, and also the response back to the user.</p>
+                <a href="https://www.w3schools.com/nodejs/obj_http_incomingmessage.asp" target="_blank">REQUEST: IncomingMessage Object</a> <br>
+                <a href="https://www.w3schools.com/nodejs/obj_http_serverresponse.asp" target="_blank">RESPOMSE: ServerResponse Methods and Properties</a>
+                <p><span class="code">server.listen(optional: port, hostname, backlog, callback)</span> method creates a listener on the specified port or path. <a href="https://www.w3schools.com/nodejs/met_server_listen.asp" target="_blank">server.listen() Method</a></p>
+                <p><a href="https://nodejs.org/api/url.html#new-urlinput-base" class="code">new URL(input[, base])</a></p>
             </div>
         </div>
+        <!-- 00:00 - įvadas į back-end (klientas - užklausa-serveris) - primityvus pvz.
+08:35 - įvadas į back- end (klientas, serveris, coockies, duombazės, thrid-party) - sudėtingesnis pvz.
+19:20 - apie DNS -->
 
         <a href="#" class="fa fa-angle-up back-to-top"></a>
         <!-- /imagine prompt:abandoned city after cataclysm, red sunset, destroyed skyscrapers and homes with no windows, autumn, funny clown patting relaxed dirty black cat with amber eyes in front of the picture, old newspapers and leaves flying  in the wind, melancholic, digital surrealistism -->
