--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
                 <a href="" target="_blank"> Personal Repo for the project </a>
             </header>
             <div class="day">
-                <h3>2023-01-19 - back-end</h3>
+                <h3>2023-01-19 - back-end, creating server</h3>
                 <a class="youtube" href="https://www.youtube.com/watch?v=0geOwWRvqWw" target="_blank">Youtube video part 73
                 </a>
                 <a class="youtube" href="https://www.youtube.com/watch?v=lt4quZxssno" target="_blank">Youtube video part 74
