--- a/index.html
+++ b/index.html
@@ -852,10 +852,42 @@
                 <p><span class="code">server.listen(optional: port, hostname, backlog, callback)</span> method creates a listener on the specified port or path. <a href="https://www.w3schools.com/nodejs/met_server_listen.asp" target="_blank">server.listen() Method</a></p>
                 <p><a href="https://nodejs.org/api/url.html#new-urlinput-base" class="code">new URL(input[, base])</a></p>
             </div>
+            <div class="day">
+                <h3>2023-01-23 - config file, routes, class inheritance </h3>
+                <a class="youtube" href="https://www.youtube.com/watch?v=1wg5gEBvuy0" target="_blank">Youtube video part 75
+                </a>
+                <a class="youtube" href="https://www.youtube.com/watch?v=TXiyegwlJ2Q" target="_blank">Youtube video part 76
+                </a>
+                <p>to add <span class="code">NODE_ENV=value</span> parameter in the terminal write <span class="code">NODE_ENV=value node .</span> Parameter will be put under <span class="code">process.env</span> object.</p>
+            </div>
+            <div class="day">
+                <h3>2023-01-24 - utility functions, CRUD intro, fs module, await-async functions, promises</h3>
+                <a class="youtube" href="https://www.youtube.com/watch?v=wKJnjdesSok" target="_blank">Youtube video part 77
+                </a>
+                <a class="youtube" href="https://www.youtube.com/watch?v=cXsT_n-uKOY" target="_blank">Youtube video part 78
+                </a>
+            </div>
+            <div class="day">
+                <h3>2023-01-25 - CRUD functions, async functions, cookies, cache, fs.unlink(), writeHead() </h3>
+                <a class="youtube" href="https://www.youtube.com/watch?v=GhqO31h82Go" target="_blank">Youtube video part 79
+                </a>
+            </div>
         </div>
-        <!-- 00:00 - įvadas į back-end (klientas - užklausa-serveris) - primityvus pvz.
-08:35 - įvadas į back- end (klientas, serveris, coockies, duombazės, thrid-party) - sudėtingesnis pvz.
-19:20 - apie DNS -->
+        <!--
+07:54 - async funkcijos
+09:50 - read funkcijos analizė
+18:26 - create funkcija
+26:35 - update funkcija (truncate() paaiškinimas)
+30:25 - delete funkcija
+30:58 -  fs.unlink() paaiškinimas
+46:50 - tekstinių failų skaitymas: readPublic ir fullPublicPath  funkcijos
+01:02:36 - binary failų skaitymas
+01:29:33 - apie res.end() - kaip atsakymas suinčiamas klientui
+01:33:10 - dėl back-end index.html
+01:43:49 - testas su admin.css
+01:48:04 - writeHead() metodas
+
+        -->
 
         <a href="#" class="fa fa-angle-up back-to-top"></a>
         <!-- /imagine prompt:abandoned city after cataclysm, red sunset, destroyed skyscrapers and homes with no windows, autumn, funny clown patting relaxed dirty black cat with amber eyes in front of the picture, old newspapers and leaves flying  in the wind, melancholic, digital surrealistism -->
