--- a/index.html
+++ b/index.html
@@ -872,6 +872,20 @@
                 <a class="youtube" href="https://www.youtube.com/watch?v=GhqO31h82Go" target="_blank">Youtube video part 79
                 </a>
             </div>
+            <div class="day">
+                <h3>2023-01-26 - Mime types, register page, form validations </h3>
+                <a class="youtube" href="https://www.youtube.com/watch?v=rztWOUg_ubI" target="_blank">Youtube video part 80
+                </a>
+                <a class="youtube" href="https://www.youtube.com/watch?v=YtYWQnU1pO0" target="_blank">Youtube video part 81
+                </a>
+            </div>
+            <div class="day">
+                <h3>2023-01-30 - working with form, sending a POST request to a server, buffer parse (StringDecoder), saving data</h3>
+                <a class="youtube" href="https://www.youtube.com/watch?v=nuGgSw43xnc" target="_blank">Youtube video part 82
+                </a>
+                <a class="youtube" href="https://www.youtube.com/watch?v=I2XoZPC8nt0" target="_blank">Youtube video part 83
+                </a>
+            </div>
         </div>
         <!--
 07:54 - async funkcijos
